--------------------------
Darshan Release Change Log
--------------------------

darshan-2.0.0
=============
* new output file format that is portable across architectures
  NOTE: Darshan 1.x output files are incompatible with the tools in this 
  release unless they were generated on a ppc32 architecture (Blue Gene)
* 8 new counters that record the rank of the fastest and slowest process that
  opened each shared file, along with the number of seconds and number of
  bytes consumed by those processes.  It also reports the variance in both
  time and amount of data.
* new --with-jobid-env configure argument to support recording job identifiers
  from different schedulers
* job ID is now recorded within the Darshan log in addition to in the file
  name
* darshan-job-summary.pl:
  * opens output files directly without using intermediate darshan-parser output
  * table showing data usage per file system
  * table showing I/O variance in shared files
* Fixes for bugs reported by Noah Watkins: 
  * avoid name collision in hashing function
  * divide by zero error in darshan-job-summary.pl

darshan-1.1.14
==============
* fixed erroneous incompatibility warning when opening old logs in darshan-parser

darshan-1.1.13
==============
* updated compiler scripts to fix link order in some cases with -lhdf5

darshan-1.1.12
==============
* improved mapping of file records to mount points
* new page in darshan-job-summary.pl output showing timelines of file access
* bug fix to "fast" mpif90 script
* checkpoint/restart ability in parallel fsstats script

darshan-1.1.11
==============
* Bug fix for lseek, pread, and pwrite when used in 32 applications without large file support
* Improved experimental darshan-gen-cc.pl script
* Added new experimental darshan-gen-cxx.pl script

darshan-1.1.10
==============
* Bug fix for files that are accessed with stat() but never opened
* Workaround zlib problems with 64 bit offsets on 32 bit architectures

darshan-1.1.9
=============